# basic_rust

./: Cargo.toml
src/: main.rs  model.rs  model_test_kub.rs  redis_func.rs
src/handler/: user_handler.rs
src/model/: entity.rs  interface.rs  request.rs  response.rs
src/model_test_kub/: test_mod.rs
