[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20 "
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
sqlx = { version = "0.7.1", features = ["postgres","runtime-async-std","runtime-tokio","uuid","chrono"] }
tokio = { version = "1.0.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.4.4", features = ["full"] }
uuid = { version = "1.3.1", features = ["serde", "v4"] }

